@@ -8,6 +8,17 @@ import com.if7100.service.BitacoraService;
 import com.if7100.service.DependienteService;
 import com.if7100.service.DependienteVictimaService;
 
+import org.apache.poi.ss.usermodel.BorderStyle;
+import org.apache.poi.ss.usermodel.FillPatternType;
+import org.apache.poi.ss.usermodel.HorizontalAlignment;
+import org.apache.poi.ss.usermodel.IndexedColors;
+import org.apache.poi.ss.usermodel.VerticalAlignment;
+import org.apache.poi.xssf.usermodel.XSSFCell;
+import org.apache.poi.xssf.usermodel.XSSFCellStyle;
+import org.apache.poi.xssf.usermodel.XSSFFont;
+import org.apache.poi.xssf.usermodel.XSSFRow;
+import org.apache.poi.xssf.usermodel.XSSFSheet;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -25,6 +36,11 @@ import org.springframework.web.bind.annotation.RequestParam;
 import com.if7100.service.PerfilService;
 import com.if7100.service.TipoRelacionFamiliarService;
 import com.if7100.service.VictimaService;
+import com.itextpdf.io.IOException;
+
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.http.HttpServletResponse;
+
 import com.if7100.repository.DependienteVictimaRepository;
 
 /**
@@ -75,6 +91,114 @@ public class DependienteController {
 		this.victimaService = victimaservice;
 	}
 
+	@GetMapping("/dependiente/excel")
+	public void exportToExcel(HttpServletResponse response) throws IOException, java.io.IOException {
+
+		response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
+		String headerKey = "Content-Disposition";
+		String headerValue = "attachment; filename=dependientes_filtrados.xlsx";
+		response.setHeader(headerKey, headerValue);
+
+		// Crear un nuevo libro de trabajo de Excel
+		XSSFWorkbook workbook = new XSSFWorkbook();
+		XSSFSheet sheet = workbook.createSheet("Dependientes Filtrados");
+
+		// Crear el estilo para el encabezado (negrita y color de fondo)
+		XSSFCellStyle headerStyle = workbook.createCellStyle();
+		XSSFFont font = workbook.createFont();
+		font.setBold(true);
+		headerStyle.setFont(font);
+		headerStyle.setFillForegroundColor(IndexedColors.GREY_25_PERCENT.getIndex());
+		headerStyle.setFillPattern(FillPatternType.SOLID_FOREGROUND);
+		headerStyle.setAlignment(HorizontalAlignment.CENTER);
+		headerStyle.setVerticalAlignment(VerticalAlignment.CENTER);
+		headerStyle.setBorderBottom(BorderStyle.THIN);
+		headerStyle.setBorderTop(BorderStyle.THIN);
+		headerStyle.setBorderLeft(BorderStyle.THIN);
+		headerStyle.setBorderRight(BorderStyle.THIN);
+
+		// Crear el estilo para las celdas (bordes y alineación)
+		XSSFCellStyle cellStyle = workbook.createCellStyle();
+		cellStyle.setBorderBottom(BorderStyle.THIN);
+		cellStyle.setBorderTop(BorderStyle.THIN);
+		cellStyle.setBorderLeft(BorderStyle.THIN);
+		cellStyle.setBorderRight(BorderStyle.THIN);
+		cellStyle.setAlignment(HorizontalAlignment.LEFT);
+		cellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
+
+		// Crear el estilo para las fechas
+		XSSFCellStyle dateCellStyle = workbook.createCellStyle();
+		short dateFormat = workbook.createDataFormat().getFormat("yyyy-mm-dd");
+		dateCellStyle.cloneStyleFrom(cellStyle);
+		dateCellStyle.setDataFormat(dateFormat);
+
+		// Crear la fila de encabezado
+		XSSFRow headerRow = sheet.createRow(0);
+		String[] headers = { "ID", "DNI", "Tipo de relación familiar", "Victima" };
+
+		for (int i = 0; i < headers.length; i++) {
+			XSSFCell cell = headerRow.createCell(i);
+			cell.setCellValue(headers[i]);
+			cell.setCellStyle(headerStyle); // Aplicar estilo de encabezado
+		}
+
+
+		Integer codigoPaisUsuario = this.usuario.getCodigoPais();
+
+		// Obtener la lista de dependientes filtrados por país de la víctima
+		List<DependienteVictima> todasRelaciones = dependienteVictimaService.getAllDependienteVictima();
+		List<DependienteVictima> relacionesFiltradas = todasRelaciones.stream()
+				.filter(dv -> dv.getVictima().getCICodigoPais() == codigoPaisUsuario)
+				.collect(Collectors.toList());
+	
+		List<Dependiente> dependientesFiltrados = relacionesFiltradas.stream()
+				.map(DependienteVictima::getDependiente)
+				.distinct() // Para evitar duplicados en caso de múltiples víctimas
+				.collect(Collectors.toList());
+	
+		Map<Integer, Victima> dependienteVictimaMap = relacionesFiltradas.stream()
+				.collect(Collectors.toMap(dv -> dv.getDependiente().getCI_Codigo(), DependienteVictima::getVictima));
+	
+
+		// Rellenar las filas con los datos
+		int rowNum = 1;
+		for (Dependiente dependiente : dependientesFiltrados) {
+			XSSFRow row = sheet.createRow(rowNum++);
+
+			// ID
+			row.createCell(0).setCellValue(dependiente.getCI_Codigo());
+			row.getCell(0).setCellStyle(cellStyle); // Aplicar estilo de celda
+
+			// DNI 
+			row.createCell(1).setCellValue(dependiente.getCVDNI());
+			row.getCell(1).setCellStyle(cellStyle);
+
+			// Tipo de Relación familiar
+			row.createCell(2).setCellValue(dependiente.getTipoRelacionFamiliar().getNombre());
+			row.getCell(2).setCellStyle(cellStyle);
+
+			Victima victima = dependienteVictimaMap.get(dependiente.getCI_Codigo());
+			if (victima != null) {
+				row.createCell(3).setCellValue(victima.getCVNombre());
+			} else {
+				row.createCell(3).setCellValue("Sin víctima");
+			}
+			row.getCell(3).setCellStyle(cellStyle);
+
+		}
+
+		// Ajustar automáticamente el ancho de las columnas
+		for (int i = 0; i < headers.length; i++) {
+			sheet.autoSizeColumn(i);
+		}
+
+		// Escribir el archivo Excel a la respuesta
+		try (ServletOutputStream outputStream = response.getOutputStream()) {
+			workbook.write(outputStream);
+		}
+		workbook.close();
+	}
+
 	private void validarPerfil() {
 
 		try {
@@ -116,40 +240,52 @@ public class DependienteController {
 	}
 
 	@GetMapping("/dependiente/{pg}")
-public String listDependiente(Model model, @PathVariable Integer pg) {
-    this.validarPerfil();
+	public String listDependiente(Model model, @PathVariable Integer pg) {
+		// Validar el perfil, asumo que tienes la lógica correcta aquí
+		this.validarPerfil();
 
-    int numeroTotalElementos = dependienteVictimaService.getAllDependienteVictima().size();
-    Pageable pageable = initPages(pg, 5, numeroTotalElementos);
-    Page<DependienteVictima> dependienteVictimaPage = dependienteVictimaService.getAllDependienteVictimaPage(pageable);
+		// Obtener el usuario logueado (ajusta según tu lógica)
+		int codigoPaisUsuario = this.usuario.getCodigoPais(); // Obtenemos el código de país del usuario logueado
 
-    // Mapa para asociar dependiente con sus víctimas
-    Map<Dependiente, List<Victima>> dependienteVictimasMap = new HashMap<>();
-    
-    for (DependienteVictima relacion : dependienteVictimaPage.getContent()) {
-        Dependiente dependiente = relacion.getDependiente();
-        Victima victima = relacion.getVictima();
+		// Obtener todas las relaciones dependiente-victima y filtrar según el código
+		// del país de la víctima
+		List<DependienteVictima> todasRelaciones = dependienteVictimaService.getAllDependienteVictima();
+		List<DependienteVictima> relacionesFiltradas = todasRelaciones.stream()
+				.filter(dv -> dv.getVictima().getCICodigoPais() == codigoPaisUsuario)
+				.collect(Collectors.toList());
 
-        // Verificar si el dependiente ya está en el mapa
-        if (!dependienteVictimasMap.containsKey(dependiente)) {
-            dependienteVictimasMap.put(dependiente, new ArrayList<>());
-        }
+		// Filtrar los dependientes basados en las relaciones filtradas
+		List<Dependiente> dependientesFiltrados = relacionesFiltradas.stream()
+				.map(DependienteVictima::getDependiente)
+				.distinct() // Para evitar duplicados en caso de múltiples víctimas
+				.collect(Collectors.toList());
 
-        // Agregar la víctima a la lista correspondiente al dependiente
-        dependienteVictimasMap.get(dependiente).add(victima);
-    }
+		// Obtener la cantidad total de elementos para la paginación
+		int numeroTotalElementos = dependientesFiltrados.size();
 
-    List<Integer> nPaginas = IntStream.rangeClosed(1, dependienteVictimaPage.getTotalPages())
-            .boxed()
-            .toList();
+		// Crear la paginación utilizando el servicio
+		Pageable pageable = initPages(pg, 5, numeroTotalElementos);
+		List<Dependiente> dependientesPaginados = dependientesFiltrados.stream()
+				.skip((long) pageable.getPageNumber() * pageable.getPageSize())
+				.limit(pageable.getPageSize())
+				.collect(Collectors.toList());
 
-    model.addAttribute("PaginaActual", pg);
-    model.addAttribute("nPaginas", nPaginas);
-	model.addAttribute("tipoRelacionesFamiliares", dependienteService.getAllTipoRelacionesFamiliaresPage(pageable));
-    model.addAttribute("dependienteVictimasMap", dependienteVictimasMap);
+		// Crear un mapa que relacione el ID del dependiente con la víctima
+		// correspondiente
+		Map<Integer, Victima> dependienteVictimaMap = relacionesFiltradas.stream()
+				.collect(Collectors.toMap(dv -> dv.getDependiente().getCI_Codigo(), DependienteVictima::getVictima));
 
-    return "dependientes/dependiente";
-}
+		// Añadir atributos al modelo
+		model.addAttribute("PaginaActual", pg);
+		model.addAttribute("nPaginas",
+				IntStream.rangeClosed(1, (int) Math.ceil((double) numeroTotalElementos / pageable.getPageSize()))
+						.boxed().toList());
+		model.addAttribute("dependientes", dependientesPaginados); // Dependientes filtrados y paginados
+		model.addAttribute("dependienteVictimaMap", dependienteVictimaMap); // Mapa de dependientes y sus víctimas
+
+		// Retornar la vista de dependientes
+		return "dependientes/dependiente";
+	}
 
 	@GetMapping("/dependientes/new")
 	public String createdependienteForm(Model model) {
@@ -244,19 +380,20 @@ public String listDependiente(Model model, @PathVariable Integer pg) {
 				model.addAttribute("dependiente", dependienteService.getDependienteById(id));
 
 				// Obtener la relación de dependiente-víctima desde la tabla intermedia
-				List<DependienteVictima> dependienteVictimaRelaciones = dependienteVictimaService.findBydependiente(dependienteService.getDependienteById(id));
-				
+				List<DependienteVictima> dependienteVictimaRelaciones = dependienteVictimaService
+						.findBydependiente(dependienteService.getDependienteById(id));
+
 				// Obtener todas las víctimas y agregarlas al modelo
 				List<Victima> victimas = victimaService.getAllVictima();
 
 				// Extraer las víctimas relacionadas con el dependiente
 				List<Victima> victimasRelacionadas = dependienteVictimaRelaciones.stream()
-				.map(DependienteVictima::getVictima)
-				.collect(Collectors.toList());
-		
-			model.addAttribute("dependiente", dependienteService.getDependienteById(id));
-			model.addAttribute("victimas", victimas);
-			model.addAttribute("victimasRelacionadas", victimasRelacionadas);
+						.map(DependienteVictima::getVictima)
+						.collect(Collectors.toList());
+
+				model.addAttribute("dependiente", dependienteService.getDependienteById(id));
+				model.addAttribute("victimas", victimas);
+				model.addAttribute("victimasRelacionadas", victimasRelacionadas);
 
 				modelAttributes(model);
 				return "dependientes/edit_dependiente";
@@ -279,6 +416,7 @@ public String listDependiente(Model model, @PathVariable Integer pg) {
 		Dependiente existingDependiente = dependienteService.getDependienteById(id);
 		existingDependiente.setCI_Codigo(id);
 		existingDependiente.setCVDNI(dependiente.getCVDNI());
+		existingDependiente.setTipoRelacionFamiliar(dependiente.getTipoRelacionFamiliar());
 
 		dependienteService.updateDependiente(existingDependiente);
 
